[package]
name = "nmea0183-parser"
version = "0.3.0"
edition = "2024"
authors = ["Ziv Sdeor <ziv.sdeor.dev@gmail.com>"]
description = "A zero-allocation NMEA 0183 parser that separates message framing from content parsing"
documentation = "https://docs.rs/nmea0183-parser"
homepage = "https://github.com/sdeor/nmea0183-parser"
repository = "https://github.com/sdeor/nmea0183-parser"
keywords = ["nmea", "gps", "parser", "nom", "navigation"]
categories = ["parsing"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace]
members = ["nmea0183-derive"]

[dependencies]
nom = "8.0.0"
heapless = { version = "0.8.0", optional = true }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
time = { version = "0.3.41", optional = true }
nmea0183-derive = { path = "./nmea0183-derive", version = "0.1.0", optional = true }

[features]
serde = ["dep:serde", "heapless/serde", "time/serde"]
nmea-content = ["dep:time", "dep:heapless", "derive"]
nmea-v2-3 = ["nmea-content"]
nmea-v3-0 = ["nmea-v2-3"]
nmea-v4-11 = ["nmea-v3-0"]
derive = ["dep:nmea0183-derive"]

[package.metadata.docs.rs]
features = ["nmea-v4-11"]
rustdoc-args = ["--cfg", "docsrs"]
